Änderungen in §10 Der Vorstand und §13 Auflösung des Vereins
In §10.5 wurde (§ 26 BGB) hinzugefügt
In §13.3 wurde explizit festgelegt, wer das Vermögen des Vereins erhält, wenn der Verein aufgelöst wird oder der steuerbegünstige Zweck entfällt.
Diese Änderung wurde vom Finazamt gefordert.

--- a/Satzung_ZTL.tex
+++ b/Satzung_ZTL.tex
@@ -11,9 +11,6 @@ pdfusetitle,plainpages=false]{hyperref}
 \usepackage{ccicons}
 \usepackage{url}
 
-% Use URW Garamond No. 8 as a default font. (getnonfreefonts)
-%\usepackage[urw-garamond]{mathdesign}
-%\renewcommand{\rmdefault}{ugm}
 % Optima as a sans serif font.
 \renewcommand*\sfdefault{uop}
 \usepackage[protrusion=true,expansion=true]{microtype}
@@ -23,7 +20,6 @@ pdfusetitle,plainpages=false]{hyperref}
 \pagestyle{plain}
 
 \renewcommand*\thesection{\S~\arabic{section}}
-\newcommand\datumgruendungsversammlung{26.02.2011~}
 \KOMAoptions{toc=flat}
 
 \begin{document}
@@ -164,7 +160,7 @@ Die Mitgliederversammlung
 	\item Der Vorstand ist beschlussfähig, wenn mindestens zwei Vorstandsmitglieder anwesend sind.
 	\item Beschlüsse im Vorstand werden mit einfacher Mehrheit gefasst.
 	\item Bei Ausscheiden eines Vorstandsmitglieds kann durch den Vorstand für die verbleibende Amtszeit ein Stellvertreter bestellt werden.
-	\item Der Verein wird gerichtlich und außergerichtlich durch die Vorstandsmitglieder vertreten. Der Verein wird durch den/die 1. oder 2. Vorsitzende\_n sowie ein weiteres Vorstandsmitglied nach außen vertreten.
+	\item Der Verein wird gerichtlich und außergerichtlich (§ 26 BGB) durch die Vorstandsmitglieder vertreten. Der Verein wird durch den/die 1. oder 2. Vorsitzende\_n sowie ein weiteres Vorstandsmitglied nach außen vertreten.
 	\item Der Vorstand wird von der Mitgliederversammlung auf die Dauer von einem Jahren bestellt, er bleibt jedoch bis zu Bestellung eines neuen Vorstands im Amt. Die Wiederwahl ist zulässig.
 	\item Eine juristische Person kann nicht Vorstandsmitglied werden.
 	\item Vorstandsmitglied kann nur werden, wer mindestens ein Jahr Vereinsmitglied ist und in dieser Zeit für die Ziele des Vereins förderlich
@@ -190,11 +186,12 @@ tätig war. Über die Eignung der kandidierenden Person entscheidet die Mitglied
 \begin{enumerate}
 	\item Der Antrag auf Auflösung des Vereins kann durch den Vorstand oder ein Fünftel der Mitglieder gestellt werden.
 	\item Die Auflösung des Vereins kann nur in einer eigens zu diesem Zweck einberufenen Mitgliederversammlung mit einer Mehrheit von drei Vierteln der abgegebenen gültigen Stimmen beschlossen werden.
-	\item Über verbleibendes Vereinsvermögen wird mit Auflösungsbeschluss befunden. Es ist vom Übernehmer unmittelbar und ausschließlich für gemeinnützige Zwecke im Sinne der Förderung der Vereinsziele zu verwenden. Beschlüsse über zukünftige Verwendung des Vermögens dürfen erst nach Einwilligung des Finanzamtes ausgeführt werden.
+	\item Bei Auflösung des Vereins oder bei Wegfall steuerbegünstigter Zwecke fällt das Vermögen des Vereins an eine juristische Person des öffentlichen Rechts oder eine steuerbegünstigte Körperschaft zwecks Verwendung für die Förderung von Wissenschaft und Forschung.
 \end{enumerate}
 
 \vspace{2.5cm}
 
-\noindent Vorstehende Satzung wurde in der Gründungsversammlung vom 22.01.2019 errichtet.
+\noindent Vorstehende Satzung wurde in der Gründungsversammlung vom 22.01.2019 errichtet. \\[0.5em]
+Durch Beschluss der Mitgliederversammlung vom 13.02.2019 geändert.\\[0.5cm]
 
 \end{document}
