--- a/Satzung_ZTL.tex
+++ b/Satzung_ZTL.tex
@@ -155,12 +155,13 @@ Die Mitgliederversammlung
 \end{enumerate}
 
 \section{Der Vorstand}
+\label{der-vorstand}
 \begin{enumerate}
 \item Der Vorstand trifft seine Beschlüsse auf Sitzungen, zu denen spätestens eine Woche vorher schriftlich oder per E-Mail zu laden ist. Mit dem Einverständnis aller Vorstandsmitglieder kann diese Frist verkürzt werden oder ganz entfallen.
 	\item Der Vorstand ist beschlussfähig, wenn mindestens zwei Vorstandsmitglieder anwesend sind.
 	\item Beschlüsse im Vorstand werden mit einfacher Mehrheit gefasst.
 	\item Bei Ausscheiden eines Vorstandsmitglieds kann durch den Vorstand für die verbleibende Amtszeit ein Stellvertreter bestellt werden.
-	\item Der Verein wird gerichtlich und außergerichtlich (§ 26 BGB) durch die Vorstandsmitglieder vertreten. Der Verein wird durch den/die 1. oder 2. Vorsitzende\_n sowie ein weiteres Vorstandsmitglied nach außen vertreten.
+	\item \label{der-vorstand-vertretung} Der Verein wird gerichtlich und außergerichtlich (§ 26 BGB) durch die Vorstandsmitglieder vertreten. Der Verein wird durch den/die 1. oder 2. Vorsitzende\_n sowie ein weiteres Vorstandsmitglied nach außen vertreten.
 	\item Der Vorstand wird von der Mitgliederversammlung auf die Dauer von einem Jahren bestellt, er bleibt jedoch bis zu Bestellung eines neuen Vorstands im Amt. Die Wiederwahl ist zulässig.
 	\item Eine juristische Person kann nicht Vorstandsmitglied werden.
 	\item Vorstandsmitglied kann nur werden, wer mindestens ein Jahr Vereinsmitglied ist und in dieser Zeit für die Ziele des Vereins förderlich
@@ -183,15 +184,17 @@ tätig war. Über die Eignung der kandidierenden Person entscheidet die Mitglied
 \end{enumerate}
 
 \section{Auflösung des Vereins}
+\label{aufloesung-des-vereins}
 \begin{enumerate}
 	\item Der Antrag auf Auflösung des Vereins kann durch den Vorstand oder ein Fünftel der Mitglieder gestellt werden.
 	\item Die Auflösung des Vereins kann nur in einer eigens zu diesem Zweck einberufenen Mitgliederversammlung mit einer Mehrheit von drei Vierteln der abgegebenen gültigen Stimmen beschlossen werden.
-	\item Bei Auflösung des Vereins oder bei Wegfall steuerbegünstigter Zwecke fällt das Vermögen des Vereins an eine juristische Person des öffentlichen Rechts oder eine steuerbegünstigte Körperschaft zwecks Verwendung für die Förderung von Wissenschaft und Forschung.
+	\item \label{aufloesung-des-vereins-3} Bei Auflösung des Vereins oder bei Wegfall steuerbegünstigter Zwecke fällt das Vermögen des Vereins an eine juristische Person des öffentlichen Rechts oder eine steuerbegünstigte Körperschaft zwecks Verwendung für die Förderung von Wissenschaft und Forschung.
 \end{enumerate}
 
 \vspace{2.5cm}
 
-\noindent Vorstehende Satzung wurde in der Gründungsversammlung vom 22.01.2019 errichtet. \\[0.5em]
-Durch Beschluss der Mitgliederversammlung vom 13.02.2019 geändert.\\[0.5cm]
+\noindent Beschlossen bei der Gründungsversammlung am 22.01.2019, durch Beschluss vom 13.02.2019 in \ref{der-vorstand}.\ref{der-vorstand-vertretung} (Der Vorstand) und \ref{aufloesung-des-vereins}.\ref{aufloesung-des-vereins-3} (Auflösung des Vereins) geändert.\\[0.5cm]
+
+\noindent Landau, 13.02.2019
 
 \end{document}
