Stand 06.08.2022, mit Anmerkungen von @casartar

--- a/Satzung_ZTL.tex
+++ b/Satzung_ZTL.tex
@@ -10,6 +10,7 @@ pdfusetitle,plainpages=false]{hyperref}
 
 \usepackage{ccicons}
 \usepackage{url}
+\usepackage{eurosym}
 
 % Optima as a sans serif font.
 \renewcommand*\sfdefault{uop}
@@ -90,7 +91,7 @@ Die Mitgliedschaft endet
 \begin{enumerate}
 	\item Der Verein erhebt einen regelmäßigen Mitgliedsbeitrag, der im Voraus zu entrichten ist. Näheres regelt eine von der Mitgliederversammlung zu beschließende Beitragsordnung.
 	\item Im Falle nicht fristgerechter Entrichtung der Beiträge ruht die Mitgliedschaft.
-	\item \label{mitgliedsbeitraege-mindestbeitrag} Im begründeten Einzelfall kann für ein Mitglied durch Vorstandsbeschluss ein von der Beitragsordnung abweichender Beitrag festgesetzt werden. Aus organisatorischen Gründen, und um den Willen des Mitglieds eindeutig zu erkennen die Mitgliedschaft aufrecht zu erhalten, soll dieser Beitrag minimal 1 Euro betragen.
+	\item \label{mitgliedsbeitraege-mindestbeitrag} Im begründeten Einzelfall kann für ein Mitglied durch Vorstandsbeschluss ein von der Beitragsordnung abweichender Beitrag festgesetzt werden. Aus organisatorischen Gründen, und um den Willen des Mitglieds eindeutig zu erkennen die Mitgliedschaft aufrecht zu erhalten, soll dieser Beitrag minimal 1 \euro/Monat betragen.
 	\item Bei Beendigung der Mitgliedschaft, gleich aus welchem Grund, erlöschen alle Ansprüche aus dem Mitgliedsverhältnis. Eine Rückerstattung von Beiträgen, Spenden oder sonstigen Unterstützungsleistungen ist grundsätzlich ausgeschlossen. Der Anspruch des Vereins auf offene Beitragsforderungen bleibt hiervon unberührt.
 \end{enumerate}
 
@@ -194,7 +195,7 @@ tätig war. Über die Eignung der kandidierenden Person entscheidet die Mitglied
 
 \vspace{2.5cm}
 
-\noindent Durch Beschluss der Mitgliederversammlung vom 16.07.2022 in \ref{mitgliedsbeitraege}.\ref{mitgliedsbeitraege-mindestbeitrag} sowie \ref{der-vorstand}.\ref{der-vorstand-zugehoerigkeit} geändert. In Originalfassung beschlossen bei der Gründungsversammlung am 22.01.2019, durch Beschluss vom 13.02.2019 in \ref{der-vorstand}.\ref{der-vorstand-vertretung} (Der Vorstand) und \ref{aufloesung-des-vereins}.\ref{aufloesung-des-vereins-3} (Auflösung des Vereins) geändert.\\[0.5cm]
+\noindent Durch Beschluss der Mitgliederversammlung vom 16.07.2022 in \ref{mitgliedsbeitraege}.\ref{mitgliedsbeitraege-mindestbeitrag} (Mitgliedsbeiträge) sowie \ref{der-vorstand}.\ref{der-vorstand-zugehoerigkeit} (Der Vorstand) geändert. In Originalfassung beschlossen bei der Gründungsversammlung am 22.01.2019, durch Beschluss vom 13.02.2019 in \ref{der-vorstand}.\ref{der-vorstand-vertretung} (Der Vorstand) und \ref{aufloesung-des-vereins}.\ref{aufloesung-des-vereins-3} (Auflösung des Vereins) geändert.\\[0.5cm]
 
 \noindent Landau, 16.07.2022
 
