Änderung der Vereinssatzung gemäß der Abstimmung auf der Mitgliedsversammlung vom 09.09.2023.

--- a/Satzung_ZTL.tex
+++ b/Satzung_ZTL.tex
@@ -164,7 +164,7 @@ Die Mitgliederversammlung
 	\item Beschlüsse im Vorstand werden mit einfacher Mehrheit gefasst.
 	\item Bei Ausscheiden eines Vorstandsmitglieds kann durch den Vorstand für die verbleibende Amtszeit ein Stellvertreter bestellt werden.
 	\item \label{der-vorstand-vertretung} Der Verein wird gerichtlich und außergerichtlich (§ 26 BGB) durch die Vorstandsmitglieder vertreten. Der Verein wird durch den/die 1. oder 2. Vorsitzende\_n sowie ein weiteres Vorstandsmitglied nach außen vertreten.
-	\item Der Vorstand wird von der Mitgliederversammlung auf die Dauer von einem Jahren bestellt, er bleibt jedoch bis zu Bestellung eines neuen Vorstands im Amt. Die Wiederwahl ist zulässig.
+	\item Der Vorstand wird von der Mitgliederversammlung auf die Dauer von zwei Jahren bestellt. Er bleibt jedoch bis zur Bestellung eines neuen Vorstands im Amt. Die Wiederwahl ist zulässig.
 	\item Eine juristische Person kann nicht Vorstandsmitglied werden.
 	\item \label{der-vorstand-zugehoerigkeit}Vorstandsmitglied kann nur werden, wer mindestens 6 Monate Vereinsmitglied ist und in dieser Zeit für die Ziele des Vereins förderlich
 tätig war. Über die Eignung der kandidierenden Person entscheidet die Mitgliederversammlung.
