--- a/Satzung_ZTL.tex
+++ b/Satzung_ZTL.tex
@@ -116,7 +116,7 @@ Die Organe des Vereins sind
 	\item Es können außerordentliche Mitgliederversammlungen entweder auf Beschluss des Vorstands oder auf Verlangen eines Fünftels der Mitglieder einberufen werden.
 	\item \label{mv-einladung} Die Einladung zur Mitgliederversammlung ist den Mitgliedern schriftlich oder per E-Mail unter Angabe von Ort, Zeit und Tagesordnung mindestens zwei Wochen vorher zuzustellen. Die Einladung erfolgt an die letzte vom Mitglied bekannt gegebene Adresse.
 	\item \label{mv-nachtrag} Mitglieder können zu den bestehenden Tagesordnungspunkten weitere Anträge stellen, wenn sie diese dem Vorstand spätestens eine Woche vor dem anberaumten Termin schriftlich oder per E-Mail zur Bekanntgabe mitteilen. Die Mitgliederversammlung beschließt über die Zulassung der nachträglichen Anträge zur Beschlussfassung.
-	\item Eine Vertretung eines Mitglieds durch ein anderes ist möglich, wenn die Vertretungsbefugnis schriftlich nachgewiesen wird.
+	\item Eine Vertretung eines Mitgliedes durch ein anderes ist möglich, wenn die Vertreterbefugnis schriftlich nachgewiesen wird. Die Vertretung wird auf ein Mitglied beschränkt. Das heißt, ein anwesendes Mitglied kann nur ein weiteres, nicht anwesendes Mitglied vertreten.
 	\item Jede ordnungsgemäß einberufene Mitgliederversammlung ist
     unabhängig von der Zahl der erschienenen Mitglieder
     beschlussfähig.
@@ -164,7 +164,7 @@ Die Mitgliederversammlung
 	\item Beschlüsse im Vorstand werden mit einfacher Mehrheit gefasst.
 	\item Bei Ausscheiden eines Vorstandsmitglieds kann durch den Vorstand für die verbleibende Amtszeit ein Stellvertreter bestellt werden.
 	\item \label{der-vorstand-vertretung} Der Verein wird gerichtlich und außergerichtlich (§ 26 BGB) durch die Vorstandsmitglieder vertreten. Der Verein wird durch den/die 1. oder 2. Vorsitzende\_n sowie ein weiteres Vorstandsmitglied nach außen vertreten.
-	\item Der Vorstand wird von der Mitgliederversammlung auf die Dauer von einem Jahren bestellt, er bleibt jedoch bis zu Bestellung eines neuen Vorstands im Amt. Die Wiederwahl ist zulässig.
+	\item Der Vorstand wird von der Mitgliederversammlung auf die Dauer von zwei Jahren bestellt. Er bleibt jedoch bis zur Bestellung eines neuen Vorstands im Amt. Die Wiederwahl ist zulässig.
 	\item Eine juristische Person kann nicht Vorstandsmitglied werden.
 	\item \label{der-vorstand-zugehoerigkeit}Vorstandsmitglied kann nur werden, wer mindestens 6 Monate Vereinsmitglied ist und in dieser Zeit für die Ziele des Vereins förderlich
 tätig war. Über die Eignung der kandidierenden Person entscheidet die Mitgliederversammlung.
