Änderung der Satzung gemäß der Abstimmung auf der Mitgliedsversammlung vom 09.09.2023

--- a/Satzung_ZTL.tex
+++ b/Satzung_ZTL.tex
@@ -135,7 +135,7 @@ Die Organe des Vereins sind
 	    	\item die erforderlichen Unterschriften
 			\end{enumerate}
 		\end{enumerate}
-	\item Jedes Mitglied, dessen Mitgliedschaft nicht ruht, ist stimmberechtigt.
+	\item Jedes Mitglied ab 14 Jahren, dessen Mitgliedschaft nicht ruht, ist stimmberechtigt.
 	\item Juristische Personen haben eine Stimmberechtigte Person vor der Versammlung schriftlich zu bestellen.
 \end{enumerate}
 
