--- a/Satzung_ZTL.tex
+++ b/Satzung_ZTL.tex
@@ -193,7 +193,11 @@ tätig war. Über die Eignung der kandidierenden Person entscheidet die Mitglied
 
 \vspace{2.5cm}
 
-\noindent Durch Beschluss der Mitgliederversammlung vom 09.09.2023 in \ref{der-vorstand}.\ref{der-vorstand-amtszeit} (Der Vorstand), \ref{die-mv}.\ref{mv-vertretung} sowie \ref{die-mv}.\ref{mv-ruhende-mitgliedschaft}  (Die Mitgliederversammlung) geändert. Durch Beschluss der Mitgliederversammlung vom 16.07.2022 in \ref{mitgliedsbeitraege}.\ref{mitgliedsbeitraege-mindestbeitrag} (Mitgliedsbeiträge) sowie \ref{der-vorstand}.\ref{der-vorstand-zugehoerigkeit} (Der Vorstand) geändert. In Originalfassung beschlossen bei der Gründungsversammlung am 22.01.2019, durch Beschluss vom 13.02.2019 in \ref{der-vorstand}.\ref{der-vorstand-vertretung} (Der Vorstand) und \ref{aufloesung-des-vereins}.\ref{aufloesung-des-vereins-3} (Auflösung des Vereins) geändert.\\[0.5cm]
+\noindent Durch Beschluss der Mitgliederversammlung vom 09.09.2023 in \ref{der-vorstand}.\ref{der-vorstand-amtszeit} (Der Vorstand), \ref{die-mv}.\ref{mv-vertretung} sowie \ref{die-mv}.\ref{mv-ruhende-mitgliedschaft}  (Die Mitgliederversammlung) geändert.\\
+\noindent Durch Beschluss der Mitgliederversammlung vom 16.07.2022 in \ref{mitgliedsbeitraege}.\ref{mitgliedsbeitraege-mindestbeitrag} (Mitgliedsbeiträge) sowie \ref{der-vorstand}.\ref{der-vorstand-zugehoerigkeit} (Der Vorstand) geändert.\\
+\noindent Durch Beschluss der Mitgliederversammlung vom 13.02.2019 in \ref{der-vorstand}.\ref{der-vorstand-vertretung} (Der Vorstand) und \ref{aufloesung-des-vereins}.\ref{aufloesung-des-vereins-3} (Auflösung des Vereins) geändert.\\
+\noindent In Originalfassung beschlossen bei der Gründungsversammlung am 22.01.2019, durch Beschluss vom 13.02.2019\\
+[0.5cm]
 
 \noindent Landau, 09.09.2023
 
